--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>The HTML5 Herald</title>
-		<meta name="description" content="The HTML5 Herald">
-		<meta name="author" content="SitePoint">
+		<title>Canvas Experiments</title>
+		
+		<meta name="description" content="Canvas Experiments">
+		<meta name="author" content="Ben Coveney">
 
-		<link rel="stylesheet" href="css/styles.css?v=1.0">
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-		<!--[if lt IE 9]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
+		<link rel="stylesheet" href="generated/style.css">
 	</head>
 
 	<body>
-	<script src="js/scripts.js"></script>
+		<h1>Canvas Experiments</h1>
+
+		<canvas id="viewport" width="800" height="600">
+		</canvas>
+
+		<script src="generated/source.js"></script>
 	</body>
 </html>
