--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name="author" content="Ben Coveney">
 
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" href="generated/style.css">
 	</head>
