Directory re-arrangement

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-		<link rel="stylesheet" href="generated/style.css">
+		<link rel="stylesheet" href="dist/style.css">
 	</head>
 
 	<body>
@@ -19,6 +19,6 @@
 		<canvas id="viewport" width="480" height="800">
 		</canvas>
 
-		<script src="generated/source.js"></script>
+		<script src="dist/source.js"></script>
 	</body>
 </html>
