--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Canvas Experiments">
 		<meta name="author" content="Ben Coveney">
 
-		<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" href="dist/style.css">
@@ -20,6 +20,16 @@
 		<canvas id="viewport" width="480" height="800">
 		</canvas>
 
+		<h2>About:</h2>
+		<p>Jump to climb higher and increase your score.</p>
+		<p>Built using typescript and HTML5 canvas. View on <a href="https://github.com/bencoveney/Canvas">GitHub</a> to find out more.</p>
+		<h2>Controls:</h2>
+		<ul>
+			<li>Go left: A, Left</li>
+			<li>Go right: D, Right</li>
+			<li>Jump: W, Space, Up</li>
+			<li>Restart: F5</li>
+		</ul>
 		<script src="dist/source.js"></script>
 	</body>
 </html>
