Added background music

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 			<li>Jump: W, Space, Up</li>
 			<li>Restart: F5</li>
 		</ul>
+		<h2>Credits</h2>
+		<p>Background music from <a href="http://opengameart.org/content/robotic-city-v2">Section 31</a></p>
+		<p>Sound effects made using <a href="http://www.bfxr.net">BFXR</a></p>
 		<script src="dist/source.js"></script>
 	</body>
 </html>
