Gave game a proper name

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Canvas Experiments</title>
+		<title>Quadrilactic</title>
 		
-		<meta name="description" content="Canvas Experiments">
+		<meta name="description" content="Quadrilactic">
 		<meta name="author" content="Ben Coveney">
 
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -15,13 +15,13 @@
 	</head>
 
 	<body>
-		<h1>Canvas Experiments</h1>
+		<h1>Quadrilactic</h1>
 
 		<canvas id="viewport" width="480" height="800">
 		</canvas>
 
 		<h2>About:</h2>
-		<p>Jump to climb higher and increase your score.</p>
+		<p>Quadrilactic is a simple game about bouncing through space. Jump to climb higher and increase your score.</p>
 		<p>Built using typescript and HTML5 canvas. View on <a href="https://github.com/bencoveney/Canvas">GitHub</a> to find out more.</p>
 		<h2>Controls:</h2>
 		<ul>
