--- a/index.html
+++ b/index.html
@@ -15,24 +15,33 @@
 	</head>
 
 	<body>
-		<h1>Quadrilactic</h1>
-
 		<canvas id="viewport" width="480" height="800">
 		</canvas>
-
-		<h2>About:</h2>
-		<p>Quadrilactic is a simple game about bouncing through space. Jump to climb higher and increase your score.</p>
-		<p>Built using typescript and HTML5 canvas. View on <a href="https://github.com/bencoveney/Canvas">GitHub</a> to find out more.</p>
-		<h2>Controls:</h2>
-		<ul>
-			<li>Go left: A, Left</li>
-			<li>Go right: D, Right</li>
-			<li>Jump: W, Space, Up</li>
-			<li>Restart: F5</li>
-		</ul>
-		<h2>Credits</h2>
-		<p>Background music from <a href="http://opengameart.org/content/robotic-city-v2">Section 31</a></p>
-		<p>Sound effects made using <a href="http://www.bfxr.net">BFXR</a></p>
-		<script src="dist/source.js"></script>
+		
+		<h1>Quadrilactic</h1>
+		<div class="container">
+			<div class="cell">
+				<h2>About:</h2>
+				<p>Quadrilactic is a simple game about bouncing through space. Jump to climb higher and increase your score.</p>
+				<p>Built using typescript and HTML5 canvas. View on <a href="https://github.com/bencoveney/Canvas">GitHub</a> to find out more.</p>
+			</div>
+			<div class="cell">
+				<h2>Controls:</h2>
+				<ul>
+					<li><b>Go left:</b> A, Left</li>
+					<li><b>Go right:</b> D, Right</li>
+					<li><b>Jump:</b> W, Space, Up</li>
+					<li><b>Start Game:</b> Enter, E</li>
+					<li><b>Change Volume:</b> M, V</li>
+				</ul>
+			</div>
+			<div class="cell">
+				<h2>Credits</h2>
+				<p>Background music from <a href="http://opengameart.org/content/robotic-city-v2">Section 31</a></p>
+				<p>Menu sounds from UI sounds from <a href="http://opengameart.org/content/ui-sound-effects-library">Little Robot Sound Factory</a></p>
+				<p>Sound effects made using <a href="http://www.bfxr.net">BFXR</a></p>
+				<script src="dist/source.js"></script>
+			</div>
+		</div>
 	</body>
 </html>
