Moved to external modules with webpack bundling

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<p>Background music from <a href="http://opengameart.org/content/robotic-city-v2">Section 31</a></p>
 				<p>Menu sounds from UI sounds from <a href="http://opengameart.org/content/ui-sound-effects-library">Little Robot Sound Factory</a></p>
 				<p>Sound effects made using <a href="http://www.bfxr.net">BFXR</a></p>
-				<script src="dist/source.js"></script>
+				<script src="dist/bundle.js"></script>
 			</div>
 		</div>
 	</body>
